# B5-Lab14

./: main.py  pyproject.toml
agent/: main_agent.py
analysis/: failure_analysis.md
analysis/reflections/: reflection_DaoXuanBach_2A202600640.md  reflection_Do_Thien_Linh.md  reflection_LeHoaiNam_2A202600657.md  reflection_Nguyễn Đức Kiên Trung_2A202600769.md  reflection_Nhan Khánh Đình_2A202600673.md  reflection_PhanQuocAnh_2A202600890.md
data/: golden_set.jsonl  knowledge_base.json  synthetic_gen.py
engine/: llm_judge.py  retrieval_eval.py  runner.py
reports/: benchmark_results.json  summary.json
