[project]
name = "b5-lab14"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.0",
    "openai>=1.10.0",
    "pandas>=2.1.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "ragas>=0.1.7",
    "tqdm>=4.66.0",
]
